# Top-level Cmake project file for building qStub
#
# Copyright Igor Siemienowicz 2018
# Distributed under the Boost Software License, Version 1.0. (See
# accompanying file LICENSE_1_0.txt or copy at
# https://www.boost.org/LICENSE_1_0.txt)

cmake_minimum_required(VERSION 3.10)
project(qStub LANGUAGES CXX)
# set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD 14)

### find_package (Threads)

# Using conan for dependencies
include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
conan_basic_setup()

### include_directories(
###     .
### )

add_subdirectory(test)

#### The test executable
###
###file (GLOB TEST_SRC test/*.cpp)
###add_executable(test-qlib ${TEST_SRC})
###target_link_libraries(test-qlib PRIVATE
###    ${CONAN_LIBS}
###    ${CMAKE_THREAD_LIBS_INIT}
###)
